test/scaladoc/run/usecase-var-expansion.check
warning: 1 deprecation (since 2.13.0); re-run with -deprecation for details
newSource:8: error: Incorrect variable expansion for $Coll in use case. Does the variable expand to wiki syntax when documenting class Test2?
       * @usecase def foo: $Coll[T]
                  ^
Done.
